--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <h1 class="header__title">
           The Brighton Times
         </h1>
+        <div>
+          <p class="hamburger-icon">&#9776;</p>
+        </div>
       </div>
     </header>
 
